--- a/libs/locales/vi/home.json
+++ b/libs/locales/vi/home.json
@@ -5,6 +5,12 @@
     "Need": "Bạn đang tìm kiếm",
     "parking": "chỗ đậu xe?",
     "Smart parking": "Đậu xe thông minh",
-    "Search now": "Tìm kiếm ngay"
+    "Search now": "Tìm kiếm ngay",
+    "Search": "Tìm kiếm",
+    "Bookings": "Đặt chỗ",
+    "Garages": "Garages",
+    "Admins": "Admins",
+    "New Garage": "Tạo Garage",
+    "Valets": "Nhân viên"
   }
 }
