--- a/libs/locales/en/home.json
+++ b/libs/locales/en/home.json
@@ -11,6 +11,8 @@
     "Garages": "Garages",
     "Admins": "Admins",
     "New Garage": "New Garage",
-    "Valets": "Valets"
+    "Valets": "Valets",
+    "My Trips": "My Trips",
+    "Management": "Management"
   }
 }
