--- a/libs/locales/vi/home.json
+++ b/libs/locales/vi/home.json
@@ -11,6 +11,8 @@
     "Garages": "Garages",
     "Admins": "Admins",
     "New Garage": "Tạo Garage",
-    "Valets": "Nhân viên"
+    "Valets": "Nhân viên",
+    "My Trips": "Quản lý pick drop",
+    "Management": "Quản lý"
   }
 }
