update manager, valet, admin, user

--- a/libs/locales/en/home.json
+++ b/libs/locales/en/home.json
@@ -2,6 +2,8 @@
   "aside filter": {
     "Register": "Register",
     "Login": "Login",
+    "Logout": "Logout",
+    "Later": "Later",
     "Need": "Need",
     "parking": "parking?",
     "Smart parking": "Smart parking",
@@ -13,6 +15,12 @@
     "New Garage": "New Garage",
     "Valets": "Valets",
     "My Trips": "My Trips",
-    "Management": "Management"
+    "Management": "Management",
+    "Profile": "Profile",
+    "Edit": "Edit",
+    "Cancel": "Cancel",
+    "Update sucessfull": "Update sucessfull",
+    "Please log out and log in to update information": "Please log out and log in to update information",
+    "Save": "Save Changes"
   }
 }
