--- a/libs/locales/vi/home.json
+++ b/libs/locales/vi/home.json
@@ -2,6 +2,8 @@
   "aside filter": {
     "Register": "Đăng Ký",
     "Login": "Đăng Nhập",
+    "Logout": "Đăng xuất",
+    "Later": "Để sau",
     "Need": "Bạn đang tìm kiếm",
     "parking": "chỗ đậu xe?",
     "Smart parking": "Đậu xe thông minh",
@@ -13,6 +15,12 @@
     "New Garage": "Tạo Garage",
     "Valets": "Nhân viên",
     "My Trips": "Quản lý pick drop",
-    "Management": "Quản lý"
+    "Management": "Quản lý",
+    "Profile": "Thông tin tài khoản",
+    "Edit": "Chỉnh sửa",
+    "Cancel": "Huỷ",
+    "Update sucessfull": "Cập nhật thành công",
+    "Please log out and log in to update information": "Vui lòng đăng xuất và đăng nhập lại để cập nhật thông tin",
+    "Save": "Lưu thay đổi"
   }
 }
