--- a/libs/locales/en/home.json
+++ b/libs/locales/en/home.json
@@ -13,6 +13,7 @@
     "New Garage": "New Garage",
     "Valets": "Valets",
     "My Trips": "My Trips",
-    "Management": "Management"
+    "Management": "Management",
+    "Logout": "Logout"
   }
 }
