--- a/libs/locales/vi/home.json
+++ b/libs/locales/vi/home.json
@@ -13,6 +13,7 @@
     "New Garage": "Tạo Garage",
     "Valets": "Nhân viên",
     "My Trips": "Quản lý pick drop",
-    "Management": "Quản lý"
+    "Management": "Quản lý",
+    "Logout": "Đăng Xuất"
   }
 }
